argocd-setup/overlays/prod/argocd-application/argocd-server-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-lb
spec:
  selector:
    app: argocd-server
  ports:
    - port: 8080
      targetPort: 80
  type: LoadBalancer
